uses to run in CI pipeline build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,9 @@ jobs:
                     node-version: '23'
             
             - name: install dependencies
-              uses: npm install
+              run: npm install
 
             - name: building the project
-              uses: npm run build
+              run: npm run build
             
         
